fix: show disabled scan button for grids that are out of scan range, show jump errors

--- a/src/app/components/ship-log/ship-log.component.scss
+++ b/src/app/components/ship-log/ship-log.component.scss
@@ -3,6 +3,10 @@
 	padding-right: 8px;
 }
 
+h2 {
+	margin: 8px auto 0px auto;
+}
+
 .log-entries {
 	max-height: 200px;
 	padding-right: 8px;
